--- a/HotelParse/.settings/org.eclipse.core.resources.prefs
+++ b/HotelParse/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//samplePage/ExpediaSample.html=UTF-8
 encoding//src/HotelParse/ExpediaParser.java=UTF-8
+encoding//src/HotelParse/ExpediaParser2.java=UTF-8
